GNOME Bugzilla – Bug 731430
Menu tracker undefined reference
Last modified: 2014-06-15 01:26:56 UTC
f15f13a0fb9ef0 incorrectly references "gtk_menu_tracker_item_get_is_visible", which is undefined since GtkMenuTrackerItem's visible flag is private
Created attachment 278167 [details] [review] Fix for the bug Simple substitution fix
Review of attachment 278167 [details] [review]: ok