gtk/gtkmenutracker.c
@@ -229,7 +229,7 @@ gtk_menu_tracker_item_visibility_changed (GtkMenuTrackerItem *item,
   gboolean was_visible;
   gint offset = 0;
 
-  is_now_visible = gtk_menu_tracker_item_get_is_visible (item);
+  is_now_visible = _gtk_menu_tracker_item_is_visible (item);
 
   /* remember: the item is our model */
   section = gtk_menu_tracker_section_find_model (tracker->toplevel, item, &offset);
